--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +15,8 @@
   },
   "bin": {
     "swagger-min": "swagger-min.js"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0"
   }
 }
