--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swagger-min",
-  "version": "1.0.0",
+  "version": "0.1.0-alpha.2",
   "description": "Show only the parts of a swagger document that you are interested in",
   "main": "test.js",
   "scripts": {
