Displays help if a required arg is missing
Fixes #9

* Renames swagger-min.js to swagger-min-cli.js to prepare to
  split logic between the cli and the core algorithm

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "js-yaml": "^3.12.1"
   },
   "bin": {
-    "swagger-min": "swagger-min.js"
+    "swagger-min": "swagger-min-cli.js"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
