--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "swagger-min",
   "version": "0.1.0-alpha.6",
   "description": "Show only the parts of a swagger document that you are interested in",
-  "main": "test.js",
+  "main": "src/swagger-min-cli.js",
   "scripts": {
     "test": "mocha"
   },
@@ -14,7 +14,7 @@
     "js-yaml": "^3.12.1"
   },
   "bin": {
-    "swagger-min": "swagger-min-cli.js"
+    "swagger-min": "src/swagger-min-cli.js"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
