--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,3 +21,6 @@ jobs:
       - run:
           name: test
           command: npm test
+      - run:
+          name: coverage
+          command: npm run coverage
