--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0-alpha.6",
   "description": "Show only the parts of a swagger document that you are interested in",
   "main": "src/swagger-min-cli.js",
+  "nyc": {
+    "all": true
+  },
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcover && codecov"
