--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,10 +25,10 @@ jobs:
           name: coverage
           command: npm run coverage
       - store_artifacts:
-          path: test-results.xml
-          prefix: tests
+          path: test-results
+          prefix: test-results
       - store_artifacts:
           path: coverage
           prefix: coverage
       - store_test_results:
-          path: test-results.xml
+          path: test-results
